# revm-trace

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  README.md  TxInspector.md
examples/: actix_web_integration.rs  basic_usage.rs  concurrent_erc20_test.rs  concurrent_shared_backend.rs  eip3115_inspector.rs  erc721_transfer_trace.rs  get_implemetion.rs  inspector_reset_test.rs  multi_handle_test.rs  multicall_example.rs  no_insepctors.rs  predicted_contract_address.rs  print_tracer_inspector.rs  reset_block.rs  show_balance.rs  test_contract_address.rs  trace_dex.rs  transfer_eth_failed.rs  transfer_eth_insufficient_balance.rs
examples/common/: mod.rs
src/: errors.rs  evm copy.rs  evm.rs  inspector.rs  inspectors.rs  lib.rs  trace.rs  traits.rs  types.rs  utils.rs  wrap_db.rs
src/evm/: builder.rs  config.rs  execution.rs  inspector.rs  mod.rs  processor.rs  reset.rs
src/evm/builder/: fork_db.rs
src/inspectors/: mod.rs  revm_inspectors.rs  test_inspector.rs
src/inspectors/tx_inspector/: inspector.rs  mod.rs  trace.rs  traits.rs
src/trace/: inspector.rs  mod.rs  types.rs
src/utils/: balance_utils.rs  block_utils.rs  erc20_utils.rs  error_utils.rs  mod.rs  multicall_utils.rs  proxy_utils.rs
tests/: erc20_integration_test.rs  readme.example.rs  readme_example.rs  trace_tests.rs
