[package]
name = "revm-trace"
version = "3.0.0"
edition = "2021"
authors = ["Research Project"]
description = "Research project for REVM multi-threading with latest alloy and foundry-fork-db"
license = "MIT OR Apache-2.0"

[features]
default = []
full = []


[dependencies]
# Latest versions for research
revm = { version = "24.0.1", features = [
    "serde-json", 
    "alloydb", 
    "dev", 
    "serde",
    "optional_eip3607",
    "optional_balance_check", 
    "optional_block_gas_limit",
    "optional_no_base_fee"
] }
alloy = { version = "1.0.3", default-features = false, features = ["full", "dyn-abi", "reqwest-rustls-tls","provider-debug-api", "provider-trace-api", "provider-ws"] }
foundry-fork-db = { version = "0.15.1"}
once_cell = "1.19"


# Core dependencies
tokio = { version = "1.38.0", features = ["sync", "rt-multi-thread", "macros"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
colored = "*"
prettytable = "*"
