[package]
name = "revm-trace"
version = "4.0.0"
edition = "2021"
authors = ["REVM-Trace Contributors"]
description = "High-performance multi-threaded EVM transaction simulator and analyzer with comprehensive tracing capabilities"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rollp0x/revm-trace"
homepage = "https://github.com/Rollp0x/revm-trace"
keywords = ["evm", "blockchain", "simulation", "multithreading", "tracing"]
categories = ["development-tools", "simulation"]
readme = "README.md"

[features]
default = ["alloy/default"]
rustls-tls = ["alloy/reqwest-rustls-tls"]
foundry-fork = ["dep:foundry-fork-db"]
full = ["foundry-fork", "rustls-tls"]

[dependencies]
# Latest versions for research
revm = { version = "24.0.1", features = [
    "serde-json", 
    "alloydb", 
    "dev", 
    "serde",
    "optional_eip3607",
    "optional_balance_check", 
    "optional_block_gas_limit",
    "optional_no_base_fee"
] }
alloy = { version = "1.0.3", default-features = false, features = ["full", "dyn-abi", "provider-debug-api", "provider-trace-api", "provider-ws"] }
foundry-fork-db = { version = "0.15.1",optional = true}
once_cell = "1.19"


# Core dependencies
tokio = { version = "1.38.0", features = ["sync", "rt-multi-thread", "macros"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
colored = "2.0"
prettytable = "0.10"
# actix-web integration dependencies
actix-web = "4.4"
env_logger = "0.10"
serde_json = "1.0"
hex = "0.4"
futures = "0.3"

